<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <!--<version>2.0.1.RELEASE</version>-->
        <!--<version>2.6.3</version>-->
        <version>2.6.4</version>
        <!--<version>3.3.2</version>-->
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.huntercodexs.simpleapidemo</groupId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <artifactId>simple-api-demo</artifactId>
    <name>simple-api-demo</name>
    <description>simple-api-demo</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!--<java.version>1.8</java.version>-->
        <!--<java.version>11</java.version>-->
        <java.version>17</java.version>
        <!--<java.version>21</java.version>-->
        <!--<spring-cloud.version>Finchley.RC1</spring-cloud.version>-->
        <start-class>com.huntercodexs.simpleapidemo.SimpleApiDemoApplication</start-class>
    </properties>

    <dependencies>

        <!--SPRING-BOOT-STARTER-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--REST TEMPLATE-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-rest</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--HTTP PATCH METHOD-->
        <!--<dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
        </dependency>-->

        <!--DATABASE-->
        <!--<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
        </dependency>-->

        <!--TOOLS/LOG-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!--<dependency>
            <groupId>com.lmax</groupId>
            <artifactId>disruptor</artifactId>
            <version>3.3.7</version>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.3</version>
            <scope>compile</scope>
        </dependency>-->

        <!--TEST IMPORT JAR: JAVA 8 PROJECT-->
        <!--<dependency>
            <groupId>com.huntercodexs.hardsys</groupId>
            <artifactId>hardsys</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.huntercodexs.jeasypdf</groupId>
            <artifactId>jeasypdf</artifactId>
            <version>24.09.1-SNAPSHOT</version>
        </dependency>-->
        <!--<dependency>
            <groupId>com.huntercodexs.quickjson</groupId>
            <artifactId>quickjson</artifactId>
            <version>1.0.8-SNAPSHOT</version>
        </dependency>-->

        <!--TEST IMPORT JAR: JAVA 11 PROJECT-->
        <!--<dependency>
            <groupId>com.huntercodexs.demo</groupId>
            <artifactId>aws-lambda-demo</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>-->
        <!--<dependency>
            <groupId>com.huntercodexs.quickjson</groupId>
            <artifactId>quickjson</artifactId>
            <version>1.0.11-SNAPSHOT</version>
        </dependency>-->

        <!--TEST IMPORT JAR: JAVA 17 PROJECT-->
        <!--<dependency>
            <groupId>com.huntercodexs.quickjson</groupId>
            <artifactId>quickjson</artifactId>
            <version>1.0.17-SNAPSHOT</version>
        </dependency>-->
        <dependency>
            <groupId>com.huntercodexs.codexstester</groupId>
            <artifactId>codexstester-test</artifactId>
            <version>1.0.0-BETA</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.vaadin.external.google</groupId>
                    <artifactId>android-json</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--TEST IMPORT JAR: JAVA 21 PROJECT-->
        <!--<dependency>
            <groupId>com.huntercodexs.quickjson</groupId>
            <artifactId>quickjson</artifactId>
            <version>1.0.21-SNAPSHOT</version>
        </dependency>-->

    </dependencies>

    <!--<dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>-->

    <!--<build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <fork>true</fork>
                    <mainClass>${start-class}</mainClass>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--Generate Reports: extentreports-cucumber7-adapter-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Set the test source directory -->
                    <testSourceDirectory>src/test/java/com/huntercodexs/test</testSourceDirectory>
                    <trimStackTrace>false</trimStackTrace>
                    <excludes>
                        <exclude>**/*Integration.java</exclude>
                    </excludes>
                    <systemPropertyVariables>
                        <extent.reporter.html.start>true</extent.reporter.html.start>
                        <!-- Specify the output path for the HTML report -->
                        <extent.reporter.html.out>
                            target/cucumber-reports/ApplicationTestReport.html
                        </extent.reporter.html.out>
                        <!-- Specify the Extent configuration file -->
                        <extent.reporter.html.config>
                            src/test/resources/reporting/extent-config.xml
                        </extent.reporter.html.config>
                        <!-- Enable quiet mode to suppress console logs -->
                        <cucumber.publish.quiet>true</cucumber.publish.quiet>
                    </systemPropertyVariables>
                    <argLine>
                        --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED
                    </argLine>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <phase>integration-test</phase>
                        <configuration>
                            <excludes>
                                <exclude>none</exclude>
                            </excludes>
                            <includes>
                                <include>**/*Integration.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
